# cube2

./: .gitignore
code/: CMakeLists.txt  build.sh
code/examples/: CMakeLists.txt  run.sh  test_aclnn_quant_batch_mat_mul_v3.cpp
code/op_host/: CMakeLists.txt  quant_batch_mat_mul_v3_def.cpp  quant_batch_mat_mul_v3_infershape.cpp  quant_batch_mat_mul_v3_tiling.cpp
code/op_kernel/: CMakeLists.txt  quant_batch_mat_mul_v3.cpp  quant_batch_mat_mul_v3.h  quant_batch_mat_mul_v3_tiling_data.h  quant_batch_mat_mul_v3_tiling_key.h
code/tests/ut/: CMakeLists.txt  run.sh
code/tests/ut/cmake/: BuildGoogleTest.cmake
code/tests/ut/common/: any_value.h  infershape_case_executor.cpp  infershape_case_executor.h  infershape_context_faker.cpp  infershape_context_faker.h  tiling_case_executor.cpp  tiling_case_executor.h  tiling_context_faker.cpp  tiling_context_faker.h
code/tests/ut/op_host/: CMakeLists.txt  test_op_host_main.cpp  test_quant_batch_mat_mul_v3_tiling.cpp
code/tests/ut/op_kernel/: CMakeLists.txt  quant_batch_mat_mul_v3_tiling.h  test_quant_batch_mat_mul_v3.cpp
code/tests/ut/op_kernel/quant_batch_mat_mul_v3_data/: compare_data.py  gen_data.py
